@@ -1,9 +1,12 @@
 Package: tram
 Title: Transformation Models
 Version: 0.3-2
-Date: 2019-12-13
-Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
-                  email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))
+Date: 2020-01-08
+Authors@R: c(person("Torsten", "Hothorn", role = c("aut", "cre"),
+                    email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471")),
+             person("Brian", "Ripley", role = "ctb"),
+             person("Bill", "Venables", role = "ctb"),
+             person(c("Douglas", "M."), "Bates", role = "ctb"))
 Description: Formula-based user-interfaces to specific transformation models
   implemented in package 'mlt'. Available models include Cox models, some parametric 
   survival models (Weibull, etc.), models for ordered categorical variables,
