@@ -39,3 +39,4 @@ S3method("print", "summary.tram")
 S3method("plot", "tram")
 S3method("update", "tram")
 S3method("residuals", "tram")
+S3method("profile", "tram")
